[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/UI.gd" type="Script" id=1]
[ext_resource path="res://actors/Shop.tscn" type="PackedScene" id=2]
[ext_resource path="res://actors/StorageControl.tscn" type="PackedScene" id=3]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="Layer1" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Layer1"]
margin_left = 6.0
margin_top = 5.0
margin_right = 65.0
margin_bottom = 45.0

[node name="Buy" type="Button" parent="Layer1/VBoxContainer"]
unique_name_in_owner = true
margin_right = 59.0
margin_bottom = 15.0
text = "Buy"

[node name="Storage" type="Button" parent="Layer1/VBoxContainer"]
unique_name_in_owner = true
margin_top = 19.0
margin_right = 59.0
margin_bottom = 34.0
text = "Storage"

[node name="PlacementControls" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PlacementControls"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = -25.0
margin_right = -6.0
margin_bottom = -5.0
alignment = 1

[node name="Left" type="Button" parent="PlacementControls/HBoxContainer"]
margin_right = 53.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Flip"

[node name="ToStorage" type="Button" parent="PlacementControls/HBoxContainer"]
margin_left = 57.0
margin_right = 110.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Storage"

[node name="Place" type="Button" parent="PlacementControls/HBoxContainer"]
unique_name_in_owner = true
margin_left = 114.0
margin_right = 168.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Place"

[node name="StorageControl" parent="." instance=ExtResource( 3 )]
visible = false

[node name="Shop" parent="." instance=ExtResource( 2 )]
visible = false

[connection signal="pressed" from="Layer1/VBoxContainer/Buy" to="." method="_on_Buy_pressed"]
[connection signal="pressed" from="Layer1/VBoxContainer/Storage" to="." method="_on_Storage_pressed"]
[connection signal="pressed" from="PlacementControls/HBoxContainer/Left" to="." method="_on_Left_pressed"]
[connection signal="pressed" from="PlacementControls/HBoxContainer/ToStorage" to="." method="_on_ToStorage_pressed"]
[connection signal="pressed" from="PlacementControls/HBoxContainer/Place" to="." method="_on_Place_pressed"]
